# teranga-cast

./: .gitignore  Cargo.toml  README.md  terangacast.md
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs  scap_capture.rs
crates/encoder/: Cargo.toml
crates/encoder/src/: lib.rs  openh264_encoder.rs  yuv.rs
crates/streamer/: Cargo.toml
crates/streamer/src/: lib.rs  signaling.rs  webrtc_sender.rs
docs/superpowers/plans/: 2026-06-11-terangacast-mvp.md
receiver/: index.html  receiver.js
sender/: package-lock.json  package.json
sender/src/: App.tsx
sender/src-tauri/: Cargo.toml  tauri.conf.json
sender/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
sender/src/components/: QualitySelector.tsx  StreamControl.tsx
