[workspace]
members = [
    "crates/capture",
    "crates/encoder",
    "crates/streamer",
    "sender/src-tauri",
]
resolver = "2"

[workspace.dependencies]
tokio      = { version = "1.40", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "2.0"
bytes      = "1.7"
tracing    = "0.1"
