[package]
name    = "terangacast-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
terangacast-capture = { path = "../capture" }
terangacast-encoder = { path = "../encoder" }
webrtc     = "0.12"
axum       = { version = "0.8", features = ["tokio"] }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
bytes      = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
